pull info from api markit

--- a/views/quote.jade
+++ b/views/quote.jade
@@ -1,19 +1,16 @@
 //- child.jade
 extends ./layout.jade
 block .container
-  h1 #{title} - Quote for a Stock
-  form(method='POST')
-    .form-group
-      label First Name
-      input(type='text',name='name', placeholder='First Name')
-    .form-group
-      label Last Name
-      input(type='text',name='name', placeholder='Last Name')
-    .form-group
-      label Stock Symbol
-      input(type='text',name='name', placeholder='Stock Symbol')
-    .form-group
-      label Quantity
-      input(type='email',name='email', placeholder='Quantity')
-    .form-group
-      input(type='submit', value='Current Price')
+  h1 #{title}
+  h1 's Portfolio
+    form(method='POST')
+      .form-group
+        label Symbol
+        input(type='text',name='symbol', placeholder='Symbol')
+      button(class="btn", data-action="sell").Sell
+      button(class="btn", data-action="newQuote").New Quote
+    p Name
+    p Current Market Value:
+      //a(href=marketValue.URL)= marketValue
+    p Total Portfolio Value
+
